--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Juan Manuel Barneaud">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/style.css">
     <title>Curriculum</title>
 </head>
@@ -24,7 +25,7 @@
             </div>
 
             <div class="contact-info">
-                <h3 class="title-right">Contacto</h3>
+                <h3 class="title-left">Contacto</h3>
                 <ul>
                     <li>
                         <span class="material-icons">email</span>
@@ -46,7 +47,7 @@
             </div>
             
             <div class="skills">
-                <h3 class="title-right">Habilidades</h3>
+                <h3 class="title-left">Habilidades</h3>
                 <ul>
                     <li>
                         <span class="skill-name">HTML</span>
@@ -76,7 +77,7 @@
             </div>
 
             <div class="languages">
-                <h3 class="title-right">Lenguajes</h3>
+                <h3 class="title-left">Lenguajes</h3>
                 <ul>
                     <li>
                         <div class="name-lang">Español</div>
@@ -119,6 +120,16 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+
+            <div class="hobbies">
+                <h3 class="title-left">Hobbies</h3>
+                <div>
+                    <span class="material-symbols-rounded">headphones</span>
+                    <span class="material-symbols-rounded">fitness_center</span>
+                    <span class="material-symbols-rounded">directions_bike</span>
+                    <span class="material-symbols-rounded">sports_esports</span>
+                </div>
             </div>
 
         </div>
