added social networks and corrected stars not going to the end of the div

--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
                     <span class="material-symbols-rounded">sports_esports</span>
                 </div>
             </div>
+            
+            <div class="social-net">
+                <h3 class="title-left">Redes</h3>
+                <div class="net-container">
+                    <img src="iconos/facebook.svg" alt="facebook">
+                    <img src="iconos/linkedin.svg" alt="linkedin">
+                    <img src="iconos/github.svg" alt="github">
+                    <img src="iconos/square-twitter.svg" alt="twitter">
+                    <img src="iconos/instagram.svg" alt="instagram">
+                </div>
+            </div>
 
         </div>
         <div class="right-side"></div>
