added right side, about me, education and laboral exp

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Juan Manuel Barneaud">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/style.css">
     <title>Curriculum</title>
 </head>
+
 <body>
     <div class="container">
         <div class="left-side">
@@ -45,7 +48,7 @@
                     </li>
                 </ul>
             </div>
-            
+
             <div class="skills">
                 <h3 class="title-left">Habilidades</h3>
                 <ul>
@@ -131,7 +134,7 @@
                     <span class="material-symbols-rounded">sports_esports</span>
                 </div>
             </div>
-            
+
             <div class="social-net">
                 <h3 class="title-left">Redes</h3>
                 <div class="net-container">
@@ -144,7 +147,88 @@
             </div>
 
         </div>
-        <div class="right-side"></div>
+        <div class="right-side">
+            <div class="name-right-box">
+                <h1 class="nombre">Juan Manuel Barneaud</h1>
+                <h2 class="profession">Bioingeniero</h2>
+            </div>
+            <div class="about">
+                <h2 class="title-right">Acerca de mi</h2>
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil quidem ratione animi eveniet
+                    dolorem. Ex voluptatibus totam, cupiditate, earum omnis fuga fugiat quae incidunt minus, repellat
+                    veniam laudantium nam! Voluptates!
+                </p>
+            </div>
+
+            <h2 class="title-right">Educación</h2>
+            <div class="education">
+                <div class="date">
+                    <h4>1995-2000</h4>
+                </div>
+                <div class="institution-diploma">
+                    <h4>Técnico químico superior</h4>
+                    <h6>Esc. Industrial Superior</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique accusantium iste totam aliquid
+                        sapiente magnam placeat animi cupiditate? Adipisci, minus!
+                    </p>
+                </div>
+            </div>
+            <div class="education">
+                <div class="date">
+                    <h4>2001-2010</h4>
+                </div>
+                <div class="institution-diploma">
+                    <h4>Ingeniero Biomédico</h4>
+                    <h6>Universidad Nacional de Entre Ríos</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati molestias optio delectus
+                        praesentium cumque, fugiat nobis dolore reprehenderit eos iusto!
+                    </p>
+                </div>
+            </div>
+            <div class="education">
+                <div class="date">
+                    <h4>2012-2015</h4>
+                </div>
+                <div class="institution-diploma">
+                    <h4>Auditor Lider ISO 9001</h4>
+                    <h6>IRAM Rosario</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quod quos maxime in enim.
+                        Expedita?
+                    </p>
+                </div>
+            </div>
+
+            <h2 class="title-right">Experiencia Laboral</h2>
+            <div class="experience">
+                <div class="date-company">
+                    <h4>2010-2016</h4>
+                    <h4>Space-X Inc.</h4>
+                </div>
+                <div class="position-information">
+                    <h4>Rocket designer jr. jr. jr.</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni deserunt voluptate nesciunt
+                        deleniti qui molestiae dignissimos soluta aliquam quos a harum officia vero possimus
+                        accusantium, odit, cum quaerat, ipsa eum?
+                    </p>
+                </div>
+            </div>
+
+            <div class="experience">
+                <div class="date-company">
+                    <h4>2017-2023</h4>
+                    <h4>La escaloneta</h4>
+                </div>
+                <div class="position-information">
+                    <h4>Esperando que me llamen</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, natus porro. Architecto nulla quidem
+                        nostrum delectus, vero animi eaque repellat corrupti. Possimus ipsum dicta neque modi distinctio
+                        enim animi atque.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
+
 </html>
