--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
             <div class="social-net">
                 <h3 class="title-left">Redes</h3>
                 <div class="net-container">
-                    <img src="iconos/facebook.svg" alt="facebook">
-                    <img src="iconos/linkedin.svg" alt="linkedin">
-                    <img src="iconos/github.svg" alt="github">
-                    <img src="iconos/square-twitter.svg" alt="twitter">
-                    <img src="iconos/instagram.svg" alt="instagram">
+                    <img src="facebook.svg" alt="facebook">
+                    <img src="linkedin.svg" alt="linkedin">
+                    <img src="github.svg" alt="github">
+                    <img src="square-twitter.svg" alt="twitter">
+                    <img src="instagram.svg" alt="instagram">
                 </div>
             </div>
 
