can´t use relative rout with files in hosted in github, changed to use https rout

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
             <div class="social-net">
                 <h3 class="title-left">Redes</h3>
                 <div class="net-container">
-                    <img src="facebook.svg" alt="facebook">
-                    <img src="linkedin.svg" alt="linkedin">
-                    <img src="github.svg" alt="github">
-                    <img src="square-twitter.svg" alt="twitter">
-                    <img src="instagram.svg" alt="instagram">
+                    <img src="https://juanhumo.github.io/Curriculum/facebook.svg" alt="facebook">
+                    <img src="https://juanhumo.github.io/Curriculum/linkedin.svg" alt="linkedin">
+                    <img src="https://juanhumo.github.io/Curriculum/github.svg" alt="github">
+                    <img src="https://juanhumo.github.io/Curriculum/square-twitter.svg" alt="twitter">
+                    <img src="https://juanhumo.github.io/Curriculum/instagram.svg" alt="instagram">
                 </div>
             </div>
 
