added commentarys to separate better code sections in html and css files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 
 <body>
     <div class="container">
+
+
+<!--========================== Lado izquierdo del crurriculum ==========================-->
+<!--====================================================================================-->
+
         <div class="left-side">
+
+
+<!--================================== Foto de perfil ==================================-->
 
             <div class="profile-box">
                 <div class="profile-img">
@@ -26,6 +34,9 @@
                     <h3>Bioingeniero</h3>
                 </div>
             </div>
+
+
+<!--============================= Información de contacto ==============================-->
 
             <div class="contact-info">
                 <h3 class="title-left">Contacto</h3>
@@ -48,6 +59,9 @@
                     </li>
                 </ul>
             </div>
+
+
+<!--=================================== Habilidades ====================================-->            
 
             <div class="skills">
                 <h3 class="title-left">Habilidades</h3>
@@ -78,6 +92,9 @@
                     </li>
                 </ul>
             </div>
+
+
+<!--===================================== Idiomas ======================================-->
 
             <div class="languages">
                 <h3 class="title-left">Lenguajes</h3>
@@ -125,6 +142,9 @@
                 </ul>
             </div>
 
+
+<!--====================================== Hobbies =====================================-->
+
             <div class="hobbies">
                 <h3 class="title-left">Hobbies</h3>
                 <div>
@@ -134,6 +154,9 @@
                     <span class="material-symbols-rounded">sports_esports</span>
                 </div>
             </div>
+
+
+<!--================================== Redes sociales ==================================-->
 
             <div class="social-net">
                 <h3 class="title-left">Redes</h3>
@@ -146,12 +169,19 @@
                 </div>
             </div>
 
+
+
+<!--=========================== Lado derecho del crurriculum ===========================-->
+<!--====================================================================================-->
         </div>
         <div class="right-side">
             <div class="name-right-box">
                 <h1 class="nombre">Juan Manuel Barneaud</h1>
                 <h2 class="profession">Bioingeniero</h2>
             </div>
+
+<!--============================== Sección de "Sobre mi" ===============================-->
+
             <div class="about">
                 <h2 class="title-right">Acerca de mi</h2>
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil quidem ratione animi eveniet
@@ -160,6 +190,9 @@
                 </p>
             </div>
 
+
+<!--================================ Sección educación =================================-->
+ 
             <h2 class="title-right">Educación</h2>
             <div class="education">
                 <div class="date">
@@ -197,6 +230,9 @@
                     </p>
                 </div>
             </div>
+
+
+<!--=========================== Sección experiencia laboral ============================-->
 
             <h2 class="title-right">Experiencia Laboral</h2>
             <div class="experience">
