--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </div>
     </div>
     </div>
-    <script src="app.js"></script>
+    <script src="https://juanhumo.github.io/Curriculum/app.js"></script>
 </body>
 
 </html>
