--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
     </div>
     </div>
     <script src="https://juanhumo.github.io/Curriculum/app.js"></script>
+    <!--<script src="app.js"></script>-->
 </body>
 
 </html>
