finnished color styles menu

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         
         <header>
             <div class="nav-bar" onclick="mostrarOcultarMenu()">
-                M
+                <span class="material-symbols-rounded">palette</span>
             </div>
-            <nav id="nav" class="nav">
-                <p>Estilo 1</p>
-                <p>Estilo 2</p>
-                <p>Estilo 3</p>
-                <p>Estilo 4</p>
-                <p>Estilo 5</p>
-            </nav>
+            <ul id="nav" class="nav">
+                <li><p>Estilo 1</p> <div class="estilo-1"></div></li>
+                <li><p>Estilo 2</p> <div class="estilo-2"></div></li>
+                <li><p>Estilo 3</p> <div class="estilo-3"></div></li>
+                <li><p>Estilo 4</p> <div class="estilo-4"></div></li>
+                <li><p>Estilo 5</p> <div class="estilo-5"></div></li>
+            </ul>
         </header>
 
 <!--========================== Lado izquierdo del crurriculum ==========================-->
