added anchor tags to social networks and corrected estilos = document.querySelectorAll(ul li) to --->(.nav ul li) so it wont asign all ul li to estilos

--- a/index.html
+++ b/index.html
@@ -177,11 +177,21 @@
             <div class="social-net">
                 <h3 class="title-left">Redes</h3>
                 <div class="net-container">
-                    <img src="https://juanhumo.github.io/Curriculum/facebook.svg" alt="facebook">
-                    <img src="https://juanhumo.github.io/Curriculum/linkedin.svg" alt="linkedin">
-                    <img src="https://juanhumo.github.io/Curriculum/github.svg" alt="github">
-                    <img src="https://juanhumo.github.io/Curriculum/square-twitter.svg" alt="twitter">
-                    <img src="https://juanhumo.github.io/Curriculum/instagram.svg" alt="instagram">
+                    <a href="https://www.facebook.com">
+                        <img src="https://juanhumo.github.io/Curriculum/facebook.svg" alt="facebook">
+                    </a>
+                    <a href="https://ar.linkedin.com">
+                        <img src="https://juanhumo.github.io/Curriculum/linkedin.svg" alt="linkedin">
+                    </a>
+                    <a href="https://github.com/juanhumo">
+                        <img src="https://juanhumo.github.io/Curriculum/github.svg" alt="github">
+                    </a>
+                    <a href="https://twitter.com">
+                        <img src="https://juanhumo.github.io/Curriculum/square-twitter.svg" alt="twitter">
+                    </a>
+                    <a href="https://www.instagram.com">
+                        <img src="https://juanhumo.github.io/Curriculum/instagram.svg" alt="instagram">
+                    </a>
                 </div>
             </div>
 
